--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "A Bayesian Latent Variable Model for Semi-parametric Identification and Analysis of COVID-19 Infection Rates"
-date: "May 31st, 2023"
+date: "September 5, 2023"
 author: 
   - Robert Kubinec:
       email: rmk7@nyu.edu
@@ -121,11 +121,11 @@ This approach has two advantages for applied research. First, the minimal set of
 
 Second, conceptualizing the infection rate as a latent variable within a generative modeling framework permits us to examine covariate relationships in a manner that is more nuanced. As we show in this paper, it is possible for us to employ a wide range of covariates that predict the infection rate and consequently dramatically reduce the uncertainty of our estimates without having to assume any prior relationship between covariates and the attack rate. Second, we are able to examine mediation relationships between covariates and the infection rate, which permits us to be more specific about the pathways through which covariates may be associated with infections. Especially given how difficult it is to achieve causal identification with observational epidemiological data, we believe that employing causal graphs to test for plausible mediation relationships is a way to improve our understanding of potential disease transmission dynamics.
 
-To apply the model, we estimate the infection rate in the United States from March to July of 2020, a crucial time in the pandemic as substantial uncertainty existed about how to respond to the disease. This uncertainty manifested itself in rapidly changing patterns of human behavior and also political conflict as leaders diverged over their understanding of the disease's threat. While we have increasing evidence about the relationship between partisan identities and individual beliefs about COVID-19 [@fan2020; @Grossman202007835], data about partisan identity, along with other social and economic covariates, are rarely included in efforts to model and predict the spread of the disease in the population [@flaxman2020; @sharma2020; @haug2020]. As a result, we have difficulty understanding the causal pathways through which political and social variables affect the course of the pandemic, and in turn are affected by it. In this paper we disaggregate the effects of COVID-19 policies, partisanship and demographic factors on disease outcomes by examining the way that these variables are mediated by individual mobility, reported masking and fear of the virus. Even when we cannot make exclusive claims of causal identification, we can still learn in much more detail about time-varying associations between covariates and the disease and the plausible pathways through which beliefs affected actions.
+To apply the model, we estimate the infection rate in the United States from March to July of 2020, a crucial time in the pandemic as substantial uncertainty existed about how to respond to the disease. This uncertainty manifested itself in rapidly changing patterns of human behavior and also political conflict as leaders diverged over their understanding of the disease's threat. While we have increasing evidence about the relationship between partisan identities and individual beliefs about COVID-19 [@fan2020; @Grossman202007835], data about partisan identity, along with other social and economic covariates, are rarely included in efforts to model and predict the spread of the disease in the population [@flaxman2020; @sharma2020; @haug2020]. As a result, we have difficulty understanding the causal pathways through which political and social variables affect the course of the pandemic, and in turn are affected by it. In this paper we disaggregate the effects of partisanship and demographic factors on disease outcomes by examining the way that these variables are mediated by individual mobility, reported masking and fear of the virus. Even when we cannot make exclusive claims of causal identification, we can still learn in much more detail about time-varying associations between covariates and the disease and the plausible pathways through which beliefs affected actions.
 
-We show with this model that political partisanship in the United States had a very strong association with the spread of the pandemic by increasing or reducing people's fear of the virus and also by changing their mobility patterns. A 1-SD increase in a state's 2016 vote share for Donald Trump is associated with a cumulative increase of 0.5% to 0.7% of a state's population infected by SARS-CoV-2 mediated by decreasing people's concern over the pandemic. A 2% increase in a state's vote share for U.S. President Donald Trump is also associated with a 0.5% to 0.7% increase in a state's infections mediated by changes in mobility patterns.
+We show with this model that political partisanship in the United States had a very strong association with the spread of the pandemic by increasing or reducing people's fear of the virus and also by changing their mobility patterns. A 2% increase in a state's vote share for U.S. President Donald Trump is associated with a 0.5% to 0.7% increase in a state's infections mediated by unsafe changes in mobility patterns.
 
-We also find evidence that in-person political activity is positively associated with the spread of the disease, with states that saw a 1-SD increase in social justice protests following the death of George Floyd witnessing an increase in infections as high as 0.6% over time. On the other hand, we do not find that the protests reduced people's fears of the disease or noticeably changed mobility patterns, suggesting that the spread of the disease happened solely through increased personal contact at the protests and subsequent chains of transmission rather than by changing behavioral patterns over long term.
+We also find evidence that in-person political activity is positively associated with the spread of the disease, with states that saw a 1-SD increase in social justice protests following the death of George Floyd witnessing an increase in infections as high as 0.7% over time, although only among states that witnessed continuous protest activity. On the other hand, we do not find that the protests reduced people's fears of the disease or noticeably changed mobility patterns, suggesting that the spread of the disease happened solely through increased personal contact at the protests and subsequent chains of transmission rather than by changing behavioral patterns over long term.
 
 # Background
 
@@ -1435,7 +1435,7 @@ While this model has a fairly high level of complexity, our Stan Hamiltonian Mon
 
 We next show what the joint posterior distribution looks like when we sample only from the priors---that is, when we ignore any information in either the cases or test data. The prior predictive distribution helps us understand the robustness of the priors---do they cover a wide enough range of possible infection rates---as well as the scope for our model to learn from the data. For our model, we can fit two kinds of prior distributions: one distribution that samples solely from the independent parameter distributions shown in \@ref(eq:binom6) and a second that includes are informative priors from serology surveys and expert surveys about the total number of infections. We plot estimated cumulative national infections for both types of prior distributions in Figure \@ref(fig:priorpredict).
 
-```{r priorpredict, fig.cap="Prior Predictive Distributions",eval=FALSE}
+```{r priorpredict, fig.cap="Prior Predictive Distributions"}
 
 combined <- mutate(ungroup(combined),key=1:n()) %>% 
   group_by(state) %>% 
@@ -2275,7 +2275,7 @@ p1 + p2 + plot_annotation(caption=stringr::str_wrap("Plot shows mean posterior e
 
 ```
 
-In addition to the estimation of the cumulative count of infected individuals, the model provides further useful information by parameterizing the relationship between the unobserved infection rate and the number of tests conducted in a given state. These individual parameters are shown in Figure \@ref(fig:tpi). The scale of the $y$ axis shows the number of people that a state was able to test relative to each person infected. The plot shows that those states that were worst-hit early in the pandemic were also those that under-counted infections through testing (New York, New Jersey).
+In addition to the estimation of the cumulative count of infected individuals, the model provides further useful information by parameterizing the relationship between the unobserved infection rate and the number of tests conducted in a given state. These individual parameters are shown in Figure \@ref(fig:tpi). The scale of the $y$ axis shows the number of people that a state was able to test relative to each person infected. The plot shows that those states that were worst-hit early in the pandemic were also those that under-counted infections because of testing (New York, New Jersey).
 
 ```{r tpi,fig.asp=.8,fig.cap="Measuring States' Testing Rates Relative to Infection Rates",echo=F,message=F,warning=F}
 
@@ -2417,7 +2417,7 @@ ggsave("testing.png",height=5,width=8)
 
 ```
 
-We would note that this information is also helpful to policy makers and others trying to make sense of observed case counts given the limitation in testing thus far. Our estimates help take into account these known biases and adjust them based on differences between states and within states in terms of disease trajectories. We believe this model can be used to help understand disease trends and factors associated with it even in the relatively data-poor environment many countries find themselves in. Unlike SEIR/SIR approaches, we do not employ information about hospitalization and death reporting delays, the infection-age distribution, or initial seeds. While these other outcomes can provide additional information about the progress and severity of the disease, they also considerably complicate inference.
+We would note that this information is also helpful to policy makers and others trying to make sense of observed case counts given the limitation in testing thus far. Our estimates help take into account these known biases and adjust them based on differences between states and within states in terms of disease trajectories. We believe this model can be used to help understand disease trends and factors associated with it even in the relatively data-poor environment that characterizes the initial period of a pandemic. Unlike SEIR/SIR approaches, we do not employ information about hospitalization and death reporting delays, the infection-age distribution, or initial seeds. While these other outcomes can provide additional information about the progress and severity of the disease, they can make inferences fragile when empirical data is of poor quality.
 
 ## Covariates
 
@@ -2788,25 +2788,25 @@ p2 / p1 + plot_annotation(caption="Marginal effects calculated as a 1-standard d
 
 ```
 
-The use of mediation analysis shows substantial heterogeneity in the types of associations and whether direct and indirect effects tend to complement or substitute each other. First, it is important to note that the single strongest associations in panel B come from the YouGov mask-wearing poll, the Civiqs concern over coronavirus poll and the economy poll, and the percent of a state's residents that are foreign-born. As these are cumulative average marginal effects, that number reflects what an *average* state might experience; the effect could well be larger for states with higher infection rates than average. On the other hand, as these effects are cumulative, they reflect a state that experienced a sustained increase in the covariates and so it might overstate the effects somewhat.
+The use of mediation analysis shows substantial heterogeneity in the types of associations and whether direct and indirect effects tend to complement or substitute each other. First, it is important to note that the single strongest associations in panel B come from the YouGov mask-wearing poll, the Civiqs concern over coronavirus poll, count of protests, and the relative level of a state's cardiovascular disease. As these are cumulative average marginal effects, that number reflects what an *average* state might experience; the effect could well be larger for states with higher infection rates than average. On the other hand, as these effects are cumulative, they reflect a state that experienced a sustained increase in the covariates and so it might overstate the effects somewhat.
 
-In terms of total effects in panel B, the factors that are most strongly associated with reducing infections include concern over COVID-19, wearing masks, concern over the state of the economy, higher per capita income and higher population density. Conversely, a higher percentage of foreign-born, more social justice protests, PPE policies and greater concentrations of $PM_{2.5}$ are associated with more infections. Some of these associations would correspond to what is known about the virus, such as mask-wearing reducing infections while large gatherings like protests increasing infections.
+On the whole, panel B would suggest that masking and concern over the coronavirus are leading indicators of infections given that these covariates were lagged by 14 days. In other words, people only changed their behavior once they believed that the pandemic was about to worsen, and indeed their presuppositions were correct. However, this pattern suggests that increased masking and fear of the virus were unable to prevent waves of infection from occurring. Sadly, these empirical associations correspond with what we know of the progression of the pandemic in the United States up until the arrival of effective vaccines.
 
-Mediation analysis is helpful at understanding what may be driving these associations. We can learn more about the meaning of the results when we can identify effects through pathways which we have a theoretical reason to believe matter for fighting the epidemic: individual concern over COVID-19 and individual mobility. For example, while the association with percent foreign-born is quite strong, we know that the bulk of this association arose through an unspecified mechanism. Indirectly, the percentage foreign born is associated with *reduced* COVID-19 spread via the fear pathway. Instead, it is most likely the case that the percentage of foreign born is a proxy for international travel which led to initial outbreaks. This proxy was the reason the covariate was introduced into the model as it is difficult to otherwise capture travel patterns that may have introduced the virus earlier.
+Mediation analysis is helpful at understanding what may be driving these associations. We can learn more about the meaning of the results when we can identify effects through pathways which we have a theoretical reason to believe matter for fighting the epidemic: individual concern over COVID-19 and individual mobility. The COVID poll's positive association with the spread of infections appears via mobility: as people become more concerned about the pandemic, their mobility patterns change, which is a leading indicator of the spread of the disease. However, again the positive association shows that these precautionary changes were not sufficient to prevent outbreaks. Likewise, masking has a positive association with disease, but only via an association with increased fear of the virus. Reported masking has a clear negative *direct* assocation, which we can reasonably infer to be the beneficial effect of wearing masks that can prevent infection from occuring. 
 
-In contrast to other research, we find that social justice protests are positively associated with COVID-19 spread, though the effect is of medium size. Furthermore, as we report cumulative marginal effects, it is unlikely that states experienced protests every day in the sample, suggesting that the reported effect is more of an upper bound for what most states experienced. We do not find much evidence, as @protest2020 suggest, that the positive effect of the protests was offset by reduced mobility by non-protesters as the indirect effects are almost zero. On the other hand, the effect of the protests could have been much worse if it had decreased people's fears of the virus or induced risky travel patterns. In this case, the direct effect is relatively easy to surmise: close contact through the protests which spread infections. It is important to note as well that this effect exists even controlling for both Trump vote share and Trump approval rating, so it is not simply a proxy for state-level partisanship.
+In contrast to other research, we find that social justice protests are positively associated with COVID-19 spread via a direct pathway, which could be evidence of the interpersonal contact brought on by the social movement. However, as we report cumulative marginal effects, it is unlikely that states experienced protests every day in the sample, suggesting that the reported association is more of an upper bound for what most states experienced. On the other hand, we do not find much evidence, as @protest2020 suggest, that the positive effect of the protests was offset by reduced mobility by non-protesters as the indirect effects are almost zero. 
 
-There are other interesting associations in Figure \@ref(fig:mobility). States with more people with cardiovascular issues tended to see more infections due to risky mobility patterns but fewer infections due to increased concern over COVID-19. States with more public health spending tended to have a strongly negative direct effect on the spread of infections, as we might expect given that public health practices can help spread information about the virus, but this association was partially offset by reduced concern over the pandemic and riskier travel patterns. Similarly, the number of health providers has a strong negative association with the virus that is entirely offset by reduced concern over the pandemic. Both of these covariates have as a consequence very small total effects, suggesting that the different pathways are obscuring the complex ways with which state health care resources affected the course of the pandemic.
+There are other interesting associations in Figure \@ref(fig:mobility). States with more people with cardiovascular issues tended to see more infections due to a direct pathway, possibly vulnerability to the harmful effects of the coronavirus, but also have reduced infections via mobility patterns, suggesting that these states exhibited more caution with respect to infection vectors. Similarly, population density has a positive direct association with infections--possibly due to the increased crowding and risk of interpersonal contact--but likewise offsetting associations via safer mobility patterns. While we cannot infer causality, these patterns suggest that decomposing total effects can provide new hypotheses and exploratory findings that help us understand the complex and offsetting patterns in human behavior.
 
-The economy poll is another interesting case as on the whole it is strongly negatively associated with infections. As the percentage of people who believed the economy was in a good state rose, infections tended to decrease. Furthermore, this effect is primarily a direct effect, though there is some association with reduced infections via mobility. This result is theoretically interesting as trade-offs over the economy were often framed as a willingness to combat the epidemic versus the economic consequences of social distancing [@bonaccorsi2020a]. The empirical analysis shows that this trade-off may exist and that fears over an economic downturn increased infections, though not by changing mobility patterns or concern over the severity of the disease. We might speculate that this association results from increased willingness to comply with economically costly social distancing behaviors when the economy is believed to be on sound footing, though without further analysis we cannot say for sure.
+The economy poll is another interesting case as it is weakly negatively associated with infections in terms of total effects, but it is strongly negatively correlated through a direct pathway. At the same time, improved economic perceptions are associated with increased infections via unsafe changes in mobility patterns. This result is theoretically interesting as trade-offs over the economy were often framed as a willingness to combat the epidemic versus the economic consequences of social distancing [@bonaccorsi2020a]. The empirical analysis shows that this trade-off may exist and that reduced infections is associated with improved perceptions of economic growth but also encouraging risky behaviors via mobility and interpersonal contact.
 
-What is clear is that the strongest time-varying factors present in the model concern individual behavior more than policies or state preparedness. Considering that the percentage of foreign residents (i.e., exposure to international travel) and per capita income were determined long before COVID-19 arrived, the most important manipulable factors are those involving beliefs, such as in the strength of the economy and the relative threat of COVID-19, along with personal behaviors like mask-wearing.
+What is clear is that the strongest time-varying factors present in the model concern individual behavior more than policies or state preparedness. Considering that the percentage of foreign residents (i.e., exposure to international travel) and risk of cardiovascular disease were fixed before the arrival of the pandemic, the most important manipulable factors are those involving beliefs, such as in the strength of the economy and the relative threat of COVID-19, along with personal behaviors like mask-wearing and attendance to protests.
 
-It is also interesting to note contrasting direct and indirect effects in panel A of Figure \@ref(fig:suppress). The large effect from the COVID poll primarily comes from mobility data; people who are more concerned about COVID are less likely to frequent places where they could contract the disease. The mask poll is associated with repressing COVID through mobility, fear of COVID-19, and as a direct effect (presumably reduced spread through airways). The fact that all of these associations align suggests that the idea that masks would encourage risky behavior is in fact untrue [@abaluck2020]. Finally, states with a larger proportion of smokers do tend to see more infections on a direct pathway, presumably by increasing people's risk to severe disease, but this effect is largely offset by increased fear in these states of the disease. This fascinating result shows how competing direct and indirect effects can mask an important empirical association we would expect given prior knowledge.
+<!-- It is also interesting to note contrasting direct and indirect effects in panel A of Figure \@ref(fig:suppress). The large effect from the COVID poll primarily comes from mobility data; people who are more concerned about COVID are less likely to frequent places where they could contract the disease. The mask poll is associated with repressing COVID through mobility, fear of COVID-19, and as a direct effect (presumably reduced spread through airways). The fact that all of these associations align suggests that the idea that masks would encourage risky behavior is in fact untrue [@abaluck2020]. Finally, states with a larger proportion of smokers do tend to see more infections on a direct pathway, presumably by increasing people's risk to severe disease, but this effect is largely offset by increased fear in these states of the disease. This fascinating result shows how competing direct and indirect effects can mask an important empirical association we would expect given prior knowledge. -->
 
 We next turn to the prominence of partisanship variables in explaining the spread of the disease, which we did not include in the previous figures as we interacted Trump vote share and within-state changes in approval polls in our model. Instead, we explore this interaction graphically in Figure \@ref(fig:trumpint). In this figure, the effect of Trump 2016 vote share is plotted conditional on the relative level of daily Trump approval polling on the $x$ axis. The effects are shown aggregated in panels A and B and disaggregated across mobility types in panel C. Panel A shows that in general, the effect of partisanship for Trump has both direct and indirect effects, with the direct effect highly conditional on the above/below polling average of approval for Trump in a given state (which has a maximum swing of about +/- 4 pp). When Trump approval rose, states with high Trump vote share witnessed fewer infections later on. These high conditional associations are likely due to the rally-around-the-flag effect in which Trump's approval rating spiked when the epidemic first appeared in March and April, leading to an association between high approval levels and low infection counts in conservative areas of the country.
 
-However, it is important to note opposite effects through the mediated pathways. Panels B and C in Figure \@ref(fig:trumpint) shows that Trump vote share mediated through mobility and fear is strongly positive in terms of infection counts. While the effects are not as large as the direct effects, they are still substantial. Trump vote share's effect on COVID-19 mediated through these important channels shows that pro-Trump states tend to implement social-distancing behaviors at lower rates, as previous research has shown, with consequent relative increases in infections. Furthermore, these associations are relatively constant given Trump approval polls, although there is a more stronger association for combined Trump approval polling and Trump vote share in dampening fears over COVID-19; i.e., in states that voted the most for Trump, when Trump approval reached it highest point then fear of COVID-19 declined the most (and infections consequently increased).
+However, it is important to note opposite effects through the mediated pathways. Panels B and C in Figure \@ref(fig:trumpint) shows that Trump vote share mediated through mobility is strongly positive in terms of infection counts. While the effects are not as large as the direct effects, they are still substantial. Trump vote share's effect on COVID-19 mediated through these important channels shows that pro-Trump states tend to implement social-distancing behaviors at lower rates, as previous research has shown, with consequent relative increases in infections. For the COVID poll channel, rising Trump approval is associated with reduced infections, though this association does not vary with Trump vote share, which suggests that this simply reflects people's improved opinion of Trump when infections are relatively low (and vice versa when infections are high).
 
 On the whole, this finding points to very strong associations between partisanship and the spread of the COVID-19, comparable or greater than the demographic and socio-economic factors in the model. States with higher Trump vote shares have seen significantly fewer infections via unexplained pathways, but very importantly, this decrease did not come through reduced mobility nor increased concern over COVID-19. The direct relationship is likely an artifact of the pattern of the early spread of the virus. After all, it is well-known that the early states that were infected with COVID tended to vote against Trump, although partisanship is not why they were more vulnerable to COVID initially. We believe that pro-Trump states received fortuitous outcomes by happening to not be on major travel routes from early COVID-19 hot spots; rising Trump approval in these states occurred as pro-Trump residents believed their president's dismissal of the virus' threat. In other words, the unexplained direct effect justified the relative inattention to important behaviors that could prevent infection. Given the increase in COVID-19 infections in the last two months in heavily Republican states, it would seem that this tendency would lead pro-Trump states to suffer in the long run as behavior caught up with initial conditions.
 
@@ -2940,9 +2940,9 @@ trump1 / trump2 / trump3 +
 
 ```
 
-Finally, we can also use estimates of cell phone mobility on COVID-19 to understand how NPIs have had mediated effects on the disease through increasing or decreasing mobility. Figure \@ref(fig:policyest) shows the disaggregated mediation effects for two types of policies, restrictions on businesses and stay-at-home orders. The plots reveal how indirect mediation effects change substantially over time. Panel A shows that business restrictions had a powerful suppressive effect on workplace mobility and to a lesser extent retail establishments during the early part of the epidemic, though that association weakened over time. By contrast, panel B indicates that stay-at-home orders have had more durable effects on mobility that have suppressed the disease, particularly in retail establishments, workplaces and transit. Furthermore, these effects seem to be increasing rather than decreasing over time. On the other hand, stay-at-home orders seem to be increasing disease infections via increasing residential mobility, trade-offs that were noted in some early epidemiological modeling of COVID-19 [@flaxman2020].
+<!-- Finally, we can also use estimates of cell phone mobility on COVID-19 to understand how NPIs have had mediated effects on the disease through increasing or decreasing mobility. Figure \@ref(fig:policyest) shows the disaggregated mediation effects for two types of policies, restrictions on businesses and stay-at-home orders. The plots reveal how indirect mediation effects change substantially over time. Panel A shows that business restrictions had a powerful suppressive effect on workplace mobility and to a lesser extent retail establishments during the early part of the epidemic, though that association weakened over time. By contrast, panel B indicates that stay-at-home orders have had more durable effects on mobility that have suppressed the disease, particularly in retail establishments, workplaces and transit. Furthermore, these effects seem to be increasing rather than decreasing over time. On the other hand, stay-at-home orders seem to be increasing disease infections via increasing residential mobility, trade-offs that were noted in some early epidemiological modeling of COVID-19 [@flaxman2020]. -->
 
-```{r policyest,fig.cap="Mediated Effects of Lockdowns on Google Mobility Data",fig.asp=0.9}
+```{r policyest,fig.cap="Mediated Effects of Lockdowns on Google Mobility Data",fig.asp=0.9,eval=FALSE}
 
 # to calculate these effects, need to marginalize over the 
 # sample data, and also the number of mediators/direct effects
@@ -3123,13 +3123,15 @@ ggsave("direct_indirect.png",height=8)
 
 <!-- The fact that we can find indirect effects of state policies, but not from Trump vote share, provides further evidence that the "Trump effect" is likely due to fortuitous circumstances. Indeed, the recent increase in COVID-19 among southern states is likely a reflection of the end of this long-standing trend, though it may take some time to fully reverse itself. Due to factors that were quite beyond the control of individual states, the spread of COVID-19 occurred far more in states with fewer Trump voters and consequently led to a perception that the disease was associated with liberal states. -->
 
-To compare the associations of NPIs to that of partisanship we can consider a policy of a given length of implementation. Both business restrictions and stay-at-home orders reduced infections primarily via reducing retail mobility and workplace mobility, with stay-at-home orders with associations twice as high per day compared to business restrictions. For stay-at-home orders, a policy implementation of the full sample period days is associated with a total reduction in infections of $-0.59$% (95% UI $-0.03$%, $-1.14$%). If we consider that a 1-SD increase in Trump's 2016 vote share is associated with an increase in the infection rate of $0.38$% (95% UI $0.23$%, $0.51$%) via mobility alone, it appears that a stay-at-home order would need to be implemented for at least 100 days to compensate the partisanship association, especially when Trump approval polls were rising.
+<!-- To compare the associations of NPIs to that of partisanship we can consider a policy of a given length of implementation. Both business restrictions and stay-at-home orders reduced infections primarily via reducing retail mobility and workplace mobility, with stay-at-home orders with associations twice as high per day compared to business restrictions. For stay-at-home orders, a policy implementation of the full sample period days is associated with a total reduction in infections of $-0.59$% (95% UI $-0.03$%, $-1.14$%). If we consider that a 1-SD increase in Trump's 2016 vote share is associated with an increase in the infection rate of $0.38$% (95% UI $0.23$%, $0.51$%) via mobility alone, it appears that a stay-at-home order would need to be implemented for at least 100 days to compensate the partisanship association, especially when Trump approval polls were rising. -->
 
 # Conclusion
 
+Identifying the spread of a disease in the early period of a pandemic can be quite difficult, and the model presented in this article is a way to maximize the use of available information while also propagating uncertainty in the available evidence. Furthermore, the model permits sophisticated inference in terms of relating covariates to the spread of the disease, which allows us to disentangle possible theoretical pathways through which relevant risk factors might have played a role in the spread of the pandemic. At the same time, all of the data in this paper are observational in nature and causality cannot be either inferred or assumed. Nonetheless, we believe that there is still a considerable amount of information that can be gleaned from studying this period of the COVID-19 pandemic, especially as this early period coincides with very high risk as the virus is relatively poorly understood and treatment options are limited. We hope that this modeling framework will prove useful for quickly and accurately modeling the outbreak of future acute infectious diseases.
+
 <!-- These empirical results indicate that partisanship is strongly associated with the spread of the disease, though we believe it is very unlikely that the relationship can be described as causal. Although states with higher vote shares for Donald Trump in 2016 and rising Trump approval polls have observed fewer infections, these associations are not explained primarily by mobility data nor personal concern over COVID-19, which are powerful predictors of reduced infections. We believe that further research is necessary to understand whether people have been making flawed inferences about the spread of COVID-19 and partisanship, allowing politicians to use the epidemic as a wedge issue. -->
 
-Our results show that sociopolitical covariates like partisanship are equally as important predictors of the disease's spread as are NPIs designed to counter the pandemic. These results suggest that future research take into account these covariates even if they are not traditionally included in epidemiological studies. The politicization of the pandemic undermined measures to combat and led to reduced concern over the virus in the United States, with serious consequences for individuals' exposure to SARS-CoV-2. We find that politicization on the right end of the political spectrum has the strongest association with increased spread of COVID-19, although left-leaning political activity aimed at ending policy brutality via protests is also associated with increased spread, though at a lower scale.
+<!-- Our results show that sociopolitical covariates like partisanship are equally as important predictors of the disease's spread as are NPIs designed to counter the pandemic. These results suggest that future research take into account these covariates even if they are not traditionally included in epidemiological studies. The politicization of the pandemic undermined measures to combat and led to reduced concern over the virus in the United States, with serious consequences for individuals' exposure to SARS-CoV-2. We find that politicization on the right end of the political spectrum has the strongest association with increased spread of COVID-19, although left-leaning political activity aimed at ending policy brutality via protests is also associated with increased spread, though at a lower scale. -->
 
 <!-- The model employed in this article was devised to permit the statistical identification of suppression measures and social, political and economic factors on the spread of COVID-19. It is not intended to be a replacement or alternative to the disease forecasting literature. If anything, this modeling exercise shows why structural epidemiological models are so important: without them it is impossible to project the total number of infected people on a given day. This model's simplicity and ability to use empirical data are its main features, and the hope is that it can be used and extended by researchers looking at government policies and other tertiary factors on the spread of the disease. At the very least, the model provides realistic uncertainty intervals taking into account very real biases in the observed data. -->
 
