updates to DAG figures re: R2
Former-commit-id: d55240dfefff947d437f5268d56b3c84177606f7

--- a/preamble2.tex
+++ b/preamble2.tex
@@ -1,5 +1,5 @@
 \usepackage{tikzit}
-\input{basic_oval.tikzstyles}
+\input{solid_circle.tikzstyles}
 \usepackage{setspace}
 \doublespacing
 \usepackage{caption}
